--- a/sec-1/Chats.html
+++ b/sec-1/Chats.html
@@ -57,41 +57,41 @@
             </div>
             <h3 class="mt-6 ml-4 text-sm font-semibold font-poppins text-white">TRAINEE</h3>
             <nav class="flex flex-col py-[15px] mx-4">
-                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 rounded" href="./sec-1/homeTrainee.html">
+                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 rounded" href="./homeTrainee.html">
                     <img class="ml-4" src="../images/dashboard.png" alt="">
                     <span class="ml-5">Dashboard</span>
                 </a>
-                <a class="flex justify-start py-[12px] text-blue-400 border-2 border-stone-200 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./sec-1/Chats.html">
+                <a class="flex justify-start py-[12px] text-blue-400 border-2 border-stone-200 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./Chats.html">
                     <img class="ml-4" src="../images/message.png" alt="">
                     <span class="ml-5">Messages</span>
                 </a>
-                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./sec-1/RunningTask.html">
+                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./RunningTask.html">
                     <img class="ml-4" src="../images/running.png" alt="">
                     <span class="ml-5">Running Task</span>
                 </a>
-                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./sec-1/OwnVideos.html">
+                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./OwnVideos.html">
                     <img class="ml-4" src="../images/ownvideo.png" alt="">
                     <span class="ml-5">Own Videos</span>
                 </a>
-                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./sec-1/TrainingCompany.html">
+                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./TrainingCompany.html">
                     <img class="ml-4" src="../images/Training.png" alt="">
                     <span class="ml-5">Training Company</span>
                 </a>
                 <h1 class="text-white text-xs font-poppins py-3">ADDITIONAL</h1>
-                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-200 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./sec-1/SpendingHistory.html">
+                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-200 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./SpendingHistory.html">
                     <img class="ml-4" src="../images/support.png" alt="">
                     <span class="ml-5 ">Spending History</span>
                 </a>
-                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400   hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./sec-1/setting.html">
+                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400   hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./setting.html">
                     <img class="ml-4" src="../images/support.png" alt="">
                     <span class="ml-5">Settings</span>
                 </a>
 
-                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./sec-1/SupportTicker.html">
+                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./SupportTicker.html">
                     <img class="ml-4" src="../images/supportTickets.png" alt="">
                     <span class="ml-5">Support Tickets</span>
                 </a>
-                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./sec-1/setting.html">
+                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./setting.html">
                     <img class="ml-4" src="../images/Accountsettings.png" alt="">
                     <span class="ml-5">Account Settings</span>
                 </a>
